<resources>
    <string name="app_name">Jokenpo</string>
    <string name="escolha">Escolha uma opção</string>
    <string name="escolha_maquina">Escolha do computador</string>
    <string name="imgPedra">imagem pedra</string>
    <string name="imgPapel">imagem papel</string>
    <string name="imgTesoura">imagem tesoura</string>
    <string name="imgComputador">imagem computador</string>
</resources>
